fixed / changed phone navbar (so it doesnt overextend above res), added ingrediants to every meal, styled navbar slightly, styled menues on smaller screens (min-1445px)

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nova+Slim&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2&family=Nova+Slim&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
 
 
 * {
@@ -17,6 +17,15 @@
 @keyframes slideInFromRight {
     0% {
       transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-100%);
     }
     100% {
       transform: translateX(0);
@@ -35,7 +44,7 @@
     transform: translateX(0%);
 }
 100% {
-    transform: translateX(200%);
+    transform: translateX(100%);
 }
 }
 @keyframes btnSlideOutFromLeft {
@@ -43,13 +52,13 @@
         transform: translateX(0%);
     }
     100% {
-        transform: translateX(700%);
+        transform: translateX(100%);
     }
 }
 
 @keyframes slideInFromTop{
     0% {
-        transform: translateY(-180%);
+        transform: translateY(-100%);
     }
     100% {
         transform: translateY(0%);
@@ -60,12 +69,12 @@
         transform: translateY(0%);
     }
     100% {
-        transform: translateY(-180%);
+        transform: translateY(-100%);
     }
 }
 @keyframes liSlideInFromRight {
     0% {
-      transform: translateX(300%);
+      transform: translateX(100%);
     }
     100% {
       transform: translateX(0);
@@ -77,7 +86,16 @@
       transform: translateX(0%);
     }
     100% {
-      transform: translateX(500%);
+      transform: translateX(100%);
+    }
+  }
+
+  @keyframes liSlideOutToLeft {
+    0% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-100%);
     }
   }
 
@@ -100,7 +118,7 @@
     }
 }
 body, html {
-    background-color: rgb(16, 39, 19);
+    background-color: #1b2e25;
     font-family: 'Encode Sans', sans-serif;
     scroll-behavior: smooth;
 
@@ -149,7 +167,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 0rem 5rem;
-    background-color: rgba(8, 114, 20, 0.199);
+    background-color: #34734c;
     border-bottom: 3px double;
     border-color: rgb(255, 255, 255);
     z-index: 100;
@@ -176,6 +194,7 @@ nav a {
 
 .nav-name img {
     width: 10rem;
+    margin-bottom: -2.5rem;
 }
 
 
@@ -374,7 +393,7 @@ nav a {
 }
 
 .dagens {
-    background-color: rgba(8, 114, 20, 0.199);
+    background-color: #34734c;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -419,9 +438,10 @@ nav a {
 box-shadow: 0px -16px 26px 11px #f3e40e0e;
 }
 
-h3 {
+#our-menu {
     background-color: #B8544F;
     padding: 1rem;
+    font-size: 2rem;
     text-align: center;
     color: rgb(255, 255, 255);
     border-bottom: 1px solid;
@@ -451,7 +471,15 @@ h3 {
     margin: 2vw;
     margin-top: 1rem;
     filter: opacity(80%);
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
 
+}
+
+.sallad-notera {
+    font-size: 1rem;
+    padding: 0.5rem;
+    color:rgb(92, 226, 119)
 }
 
 .pris-1 li,
@@ -461,7 +489,7 @@ h3 {
 #mexikanMenyEtt li,
 #amerikanMenyEtt li,
 #salladMenyEtt li,
-#PastaMenyEtt li,
+#pastaMenyEtt li,
 #kebabMenyEtt li,
 #inbakadeMenyEtt li,
 #halvInbakadeMenyEtt li,
@@ -469,6 +497,7 @@ h3 {
 #wings li {
     padding-left: 1rem;
     padding-top: 0.4rem;
+    padding-right: 0.3rem;
 }
 
 
@@ -477,7 +506,19 @@ li {
     padding-bottom: 0.5rem;
 }
 
-.meny__header__pizza,
+.meny__header__pizza {
+    color:#000000;
+    display: flex;
+    background-color: yellow;
+    border-color:rgba(0, 0, 0, 0.782);
+    border-style: none;
+    padding: 0.2rem;
+    text-align: center;
+    font-family: 'Amatic SC', cursive;
+    font-size: 2.4rem;
+    font-weight: 100;
+    text-transform: uppercase;
+}
 .meny__header__mexikan,
 .meny__header__amerikan,
 .meny__header__sallad,
@@ -488,19 +529,28 @@ li {
 .meny__header__hamburgare,
 .meny__header__wings {
     color:#000000;
-    text-align: center;
+    display: flex;
     background-color: yellow;
     border-color:rgba(0, 0, 0, 0.782);
     border-style: none;
     padding: 0.2rem;
-    margin: 0rem;
+    justify-content: center;
     text-align: center;
-    font-family: 'Rye', cursive;
-    font-size: 1.4rem;
+    font-family: 'Amatic SC', cursive;
+    font-size: 2.4rem;
     font-weight: 100;
     text-transform: uppercase;
 }
 
+
+
+.ing {
+    color: yellow;
+    margin-left: 1rem;
+    margin-top: -0.5rem;
+    filter: opacity(70%);
+    font-size: 1rem; 
+}
 
 #nav-phone-show,
 #nav-phone-hide-new,
@@ -541,7 +591,22 @@ footer a {
     font-size: 0.6rem;
 }
 
+@media screen and (max-width: 1445px){
+.high__res__container1
+{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 100%;
+}
 
+.menyer {
+    text-align: center;
+}
+
+
+
+}
 
 @media screen and (max-width: 820px) {
 
@@ -559,17 +624,19 @@ footer a {
         position: absolute;
         border-bottom-style: none;
         border-color: white;
-        width: 100%;
-        z-index: 10;
-        background-color: rgba(24, 67, 2, 0.788);
+        z-index: 1000;
+        width: 20rem;
+        background-color: rgb(252, 87, 87);
         text-align: left;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: left;
+        margin-left: -4rem;
         padding-top: 0.5rem;
         text-shadow: 1px 1px 4px rgb(0, 0, 0);
         visibility: hidden;
+        border-bottom-right-radius: 2rem;
     }
     
     #nav-links-phone ul li a {
@@ -717,6 +784,7 @@ footer a {
 
     .menyer {
        text-align: center;
+       
     }
 
 
@@ -764,6 +832,10 @@ footer a {
         font-size: 1.8rem;
     }
 
+
+.meny__header__pizza {
+    justify-content: center;
+}
 .high__res__container1,
 .high__res__container2,
 .high__res__container3,
@@ -775,10 +847,8 @@ footer a {
 .high__res__container9,
 .high__res__container10{
     display: flex;
-    padding: 2rem 4rem;
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
-    text-shadow: 2px 2px 2px rgb(0, 0, 0);
     font-size: 1.6rem;
 
 }
